# WebSocketTest

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile_zmq  README.md  jenkins.gdsl  server_ws.hpp  timing_helper.hpp  ws_client.cpp  ws_server.cpp
tests/: CMakeLists.txt  dummytest.cpp  dummytest.h
